Clean up generated domain classes.